--- a/src/main.css
+++ b/src/main.css
@@ -19300,9 +19300,10 @@ only screen and (min-width: 992px) and (max-width: 1199px) {
 }
 
 .tp-product-thumb-2 img {
-	/* width: 100%; */
 	height: 195px;
 	object-fit: contain;
+    object-position: top;
+    cursor: pointer;
 }
 
 /*----------------------------------------*/
@@ -21287,6 +21288,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
 	color: var(--tp-common-white);
 	padding: 9px 45px;
 	background-color: var(--tp-theme-primary);
+	border-radius: 10px;
 }
 
 .tp-product-details-bottom {
@@ -21919,8 +21921,6 @@ only screen and (min-width: 576px) and (max-width: 767px),
 	font-weight: 500;
 	font-size: 18px;
 	border-bottom: 1px solid #EEEEEE;
-	padding-bottom: 5px;
-	margin-bottom: 25px;
 }
 
 .tp-shop-widget-title.no-border {
@@ -26106,11 +26106,6 @@ only screen and (min-width: 576px) and (max-width: 767px),
 
 [dir=rtl] .tp-product-details-wishlist.mb-15 {
 	margin-right: 15px;
-}
-
-.product-list {
-	padding: 15px;
-	height: 100%
 }
 
 .tp-header-bottom-2 {
